--- a/MoneyTransfert/config/packages/security.yaml
+++ b/MoneyTransfert/config/packages/security.yaml
@@ -26,6 +26,7 @@ security:
                 failure_handler:    lexik_jwt_authentication.handler.authentication_failure
 
         api:
+            http_basic: ~
             pattern:   ^/api
             stateless: true
             guard:
