--- a/MoneyTransfert/config/packages/security.yaml
+++ b/MoneyTransfert/config/packages/security.yaml
@@ -27,7 +27,7 @@ security:
 
         api:
             http_basic: ~
-            pattern:   ^/api
+            pattern:   ^/api/a
             stateless: true
             guard:
                 authenticators:
@@ -41,4 +41,4 @@ security:
         - { path: ^/adminP, roles: ROLE_ADMINPARTENAIRE }
         - { path: ^/userLocked, roles: ROLE_USERLOCKED }
         - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/api/a,       roles: IS_AUTHENTICATED_FULLY }
