--- a/MoneyTransfert/config/packages/security.yaml
+++ b/MoneyTransfert/config/packages/security.yaml
@@ -16,6 +16,7 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+            access_denied_handler: App\Security\AccessDeniedHandler
         login:
             pattern:  ^/api/login
             stateless: true
