--- a/MoneyTransfert/config/packages/security.yaml
+++ b/MoneyTransfert/config/packages/security.yaml
@@ -17,6 +17,9 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
             access_denied_handler: App\Security\AccessDeniedHandler
+        main: 
+            json_login:
+                check_path:    /api/login_check
         login:
             pattern:  ^/api/login
             stateless: true
@@ -37,9 +40,9 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/admin, roles: ROLE_ADMIN }
-        - { path: ^/profile, roles: ROLE_USER }
-        - { path: ^/adminP, roles: ROLE_ADMINPARTENAIRE }
-        - { path: ^/userLocked, roles: ROLE_USERLOCKED }
+        - { path: ^/api/admin, roles: ROLE_ADMIN }
+        - { path: ^/api/profile, roles: ROLE_USER }
+        - { path: ^/api/partenaire, roles: ROLE_ADMINPARTENAIRE }
+        - { path: ^/api/userLocked, roles: ROLE_USERLOCKED }
         - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
