realisation de la partie front avec angular liaison angular symfony

--- a/MoneyTransfert/composer.json
+++ b/MoneyTransfert/composer.json
@@ -12,6 +12,7 @@
         "friendsofsymfony/rest-bundle": "^2.5",
         "lexik/jwt-authentication-bundle": "^2.6",
         "liip/imagine-bundle": "^2.1",
+        "nelmio/cors-bundle": "^1.5",
         "sensio/framework-extra-bundle": "^5.4",
         "symfony/console": "4.3.*",
         "symfony/dotenv": "4.3.*",
