--- a/MoneyTransfert/config/packages/security.yaml
+++ b/MoneyTransfert/config/packages/security.yaml
@@ -42,7 +42,7 @@ security:
     access_control:
         - { path: ^/api/admin, roles: ROLE_ADMIN }
         - { path: ^/api/profile, roles: ROLE_USER }
-        - { path: ^/api/partenaire, roles: ROLE_ADMINPARTENAIRE }
+        #- { path: ^/api/partenaire, roles: ROLE_ADMINPARTENAIRE }
         - { path: ^/api/userLocked, roles: ROLE_USERLOCKED }
         - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
