--- a/angular7MoneyTransfert/package.json
+++ b/angular7MoneyTransfert/package.json
@@ -27,10 +27,12 @@
     "@fortawesome/free-solid-svg-icons": "^5.10.1",
     "@sweetalert2/ngx-sweetalert2": "^6.0.1",
     "@types/bcrypt": "^3.0.0",
+    "angular-bootstrap-md": "^8.2.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "jspdf": "^1.5.3",
+    "mdbootstrap": "^4.8.9",
     "ngx-toastr": "^10.2.0",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.5.2",
